--- a/index.html
+++ b/index.html
@@ -256,36 +256,29 @@
 
 </body>
 
-<!--
 
 
-        <footer>
-            <div class="footer-container">
-                <div class="footer-section">
-                    <h3>About Me</h3>
-                    <p>Thanks for visiting my website--feel free to connect with me!</p>
-                </div>
-                <div class="footer-section">
-                    <h3>Contact Information</h3>
-                    <ul>
-                        <li>Email: nyo3@cornell.edu</li>
-                        <li><a class="footer-links" href="https://www.linkedin.com/in/nuray-ozden-247ab41b0/">LinkedIn</a></li>
-                        <li><a class="footer-links" href="https://github.com/nurayyozden">GitHub</a></li>
-                </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#projects-anchor">Projects & Experiences</a></li>
-                        <li><a href="#skills-anchor">Skills</a></li>
-                        <li><a href="#timeline-anchor">Timeline</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Nuray Ozden.  All rights reserved.</p>
-            </div>
-        </footer> -->
+<footer>
+
+<div class="footer-container">
+    <div class="footer-section" id="footer-left">
+        <p>This website was coded and designed by your truly! I designed some prototypes in <a class="text-link" href="https://proto.io/">Proto.io</a>, then used my HTML, CSS and JavaScript
+            skills to code this site from scratch. If you wish to see my code for this website, you can find it <a class="text-link" href="https://github.com/nurayyozden/nurayyozden.github.io">here.</a>
+            However, my first iteration of this site was a dynamic website, using PHP and SQL. If you wish to see the code for that version, you can find it <a class="text-link" href="https://github.com/nurayyozden/My-Professional-Website">here.</a>
+        </p>
+    </div>
+    <div class="footer-section">
+        <h4>Contact Me!</h4>
+        <p>Email: nyo3@cornell.edu</p>
+        <p><a class="text-link" href="https://www.linkedin.com/in/nuray-ozden-247ab41b0/">LinkedIn</a></p>
+        <p><a class="text-link" href="https://github.com/nurayyozden">GitHub</a></p>
+    </div>
+</div>
+    <div class="footer-bottom">
+        <p>&copy; 2024 Nuray Ozden.  All rights reserved.</p>
+    </div>
+</footer>
+
 
 
 
