--- a/l60-experience.html
+++ b/l60-experience.html
@@ -25,7 +25,7 @@
       <div class="pe-details">
         <div class="pe-left">
             <h2 class="pe-title">Computer Science RA</h2>
-            <h4 class="pe-company">Dr. Chris Anderson & LEvel60 Consulting</h4>
+            <h4 class="pe-company">Dr. Chris Anderson & Level60 Consulting</h4>
             <p class="pe-time">Summer 2022</p>
           </div>
 
@@ -37,7 +37,7 @@
                 <p>I analyzed a comprehensive data set spanning over 100 pages, updated weekly, and devised a Python-based procedure to consolidate and transfer this data into a streamlined Google Sheet. I also generated bi-weekly reports to document all advancements made. Furthermore, I applied the <a class="text-link" href='https://developers.google.com/optimization/routing/vrp'>Google OR Tools Vehicle Routing Problem</a> algorithm to the dataset, utilizing Google Operations Research Tools to identify the most efficient routes for a small scale version of the large problem, involving 10 planes and the allocation of 50 jobs.</p> 
                 <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-                <p>This multifaceted experience not only honed my data management and analysis skills but also allowed me to contribute meaningfully to optimizing operational efficiency within complex logistical frameworks.</p>
+                <p>This multifaceted experience not only honed my data management and analysis skills but also allowed me to contribute meaningfully to projects that work to opitmize efficiency.</p>
             </div>
           </div>
       </div>
@@ -68,5 +68,7 @@ backgroundColor: 0xafd0ff
 </script>
 
 </body>
+
+
 
 </html>
