--- a/turkey-earthquake-project.html
+++ b/turkey-earthquake-project.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="styles/site2.css" />
   <title>Nuray's Professional Website</title>
-
+ <!-- Lightning bolt icon -->
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 
@@ -31,19 +32,24 @@
           </div>
 
           <div class="pe-right">
-            <p class="pe-description">
-                Diving into Turkey's seismic history from 1915 to May 2023, this project represents a deeply personal exploration into the earthquakes that have shaped the landscape and the lives of millions. It is my attempt to bridge my technical and cultural passions into a project that can unveil some insight about Turkey's earthqauke history, which touched my family physcially and emotionally.
+            <div class="pe-description">
+                <p>Diving into Turkey's seismic history from 1915 to May 2023, this project represents a deeply personal exploration into the earthquakes that have shaped the landscape and the lives of millions. It is my attempt to bridge my technical and cultural passions into a project that can unveil some insight about Turkey's earthquake history, which touched my family in more than one way.</p>
+                <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-                <br><br>P1 is a comprehensive video that overviews the data cleaning, transformation, and interpretation. I decided to represent his portion of the data analysis process as a video to offer a different, more dynamic window into how I prepared the data for the next phase.
+                <p>Part 1 is a comprehensive video that overviews the data cleaning, transformation, and interpretation. I decided to represent his portion of the data analysis process as a video to offer a different, more dynamic window into how I prepared the data for the next phase.</p>
+                <div class="p1-video"><iframe class="pe-extra-content" src='https://www.youtube.com/embed/8ZhpiMON1VU'></iframe></div>
 
-                <br><br>P2 delves into preliminary data analysis and aims to unravel patterns, trends, and anomalies embedded within the data. From descriptive statistics to exploratory visualizations, each analysis layer peels back a layer and offers glimpses into the past while laying the groundwork for subsequent modeling.
+                <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
+
+                <p><a class="text-link" href="https://colab.research.google.com/github/nurayyozden/Earthquake-Project/blob/main/P2.ipynb">Part 2</a> delves into preliminary data analysis and aims to unravel patterns, trends, and anomalies embedded within the data. From descriptive statistics to exploratory visualizations, each analysis layer peels back a layer and offers glimpses into the past while laying the groundwork for subsequent modeling.</p>
+                <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
 
-                <br><br>Finally, P3 brings machine learning models to take the data a step further and see what predictive power can be unveiled. Through the implentation of Linear Regression and Random Forest Classifier models, we can see if the magnitude of earthqaukes can be predicted and classify earthqaukes. Most importantly, we get a sense for where the data lacks.
+                <p>Finally, <a class="text-link" href="https://colab.research.google.com/github/nurayyozden/Earthquake-Project/blob/main/P3.ipynb">Part 3</a> brings machine learning models to take the data a step further and see what predictive power can be unveiled. Through the implentation of Linear Regression and Random Forest Classifier models, we can see if the magnitude of earthqaukes can be predicted and classify earthqaukes. Most importantly, I got a sense for where the data lacks.</p>
+                <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-                <br><br>While this was a beginner project of mine, it offers some insight into how earthqauke attribute prediction may function and allowed me to bring my computer science background to a deeply personal and important topic. It was also one of the first projects I did completely on my own with no exterior motivator other than my own curiosity! The full project code can be found on my <a class="github-embed" href="https://github.com/nurayyozden">GitHub.</a>
-            </p>
-            <iframe class="pe-extra-content" width="420" height="315" src='https://www.youtube.com/embed/8ZhpiMON1VU'></iframe>
+                <p>While this was a beginner project of mine, it offers some insight into how earthqauke attribute prediction may function and allowed me to bring my computer science background to a deeply personal and important topic. It was also one of the first projects I did completely on my own with no exterior motivator other than my own curiosity! The full project code can be found on my <a class="github-embed" href="https://github.com/nurayyozden">GitHub.</a></p>
+            </div>
           </div>
       </div>
 
