--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <div class="home-content">
             <img class="home-img" id="profile-pic" src="uploads/beach_pic.jpeg" alt="Nuray image">
             <h1 id="hi">HI, I'M NURAY.</h1>
-            <p target="_blank" class="pronounce"><a class="text-link" href="https://www.youtube.com/watch?v=bR_JdRyhGKI">how do I pronounce that?</a></p>
-            <h2 class="hi2">A STUDENT/ENGINEER/RESEARCHER/COMPUTER SCIENTIST/CREATOR</h2>
+            <p class="pronounce"><a target="_blank" class="text-link" href="https://www.youtube.com/watch?v=bR_JdRyhGKI">how do I pronounce that?</a></p>
+            <h2 class="hi2">STUDENT / ENGINEER / RESEARCHER / COMPUTER SCIENTIST / CREATOR</h2>
 
 
         </div>
@@ -102,6 +102,8 @@
         <!-- New skills section -->
         <div class="skills-section" id="skills-anchor">
             <h1 class="home-title-header">Skills</h1>
+
+            <!-- MAYBE ADD LEADERSHIP???? -->
 
             <div class="skills-boxes">
                 <div class="skills-row">
@@ -263,7 +265,7 @@
 
 <div class="footer-container">
     <div class="footer-section" id="footer-left">
-        <p>This website was coded and designed by your truly! I designed some prototypes in <a target="_blank" class="text-link" href="https://proto.io/">Proto.io</a>, then used my HTML, CSS and JavaScript
+        <p>This website was entirely coded and designed by me! I designed some prototypes in <a target="_blank" class="text-link" href="https://proto.io/">Proto.io</a>, then used my HTML, CSS and JavaScript
             skills to code this site from scratch. If you wish to see my code for this website, you can find it <a target="_blank" class="text-link" href="https://github.com/nurayyozden/nurayyozden.github.io">here.</a>
             However, my first iteration of this site was a dynamic website, using PHP and SQL. If you wish to see the code for that version, you can find it <a target="_blank" class="text-link" href="https://github.com/nurayyozden/My-Professional-Website">here.</a>
         </p>
