--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <!-- research svg -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<!-- Menu 3 lines -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <header class="sticky-header">
@@ -44,13 +46,27 @@
         </a>
     </div>
 
-    <div class="nav-buttons">
+    <nav class="nav-bar" id="navbar-wide">
             <a href="index.html">Home</a>
             <a href="#projects-anchor">Projects & Experiences</a>
             <a href="#skills-anchor">Skills</a>
-            <!-- <a href="#timeline-anchor">Timeline</a> -->
             <a target="_blank" href="uploads/nuray_y_ozden_resume.pdf" download="nuray_y_ozden_resume.pdf" >Download My Resume</a>
-    </div>
+    </nav>
+
+    <!-- nav bar button -->
+    <span id="nav-icon" class="material-symbols-outlined">
+        menu
+    </span>
+
+    <!-- for narrow screen -->
+    <nav class="nav-bar" id="navbar-narrow">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#projects-anchor">Projects & Experiences</a></li>
+            <li><a href="#skills-anchor">Skills</a></li>
+            <li><a target="_blank" href="uploads/nuray_y_ozden_resume.pdf" download="nuray_y_ozden_resume.pdf" >Download My Resume</a></li>
+        </ul>
+    </nav>
 
 
     </header>
@@ -255,6 +271,12 @@
         color: 0xffffff,
         backgroundColor: 0xafd0ff
         })
+        </script>
+
+        <script>
+        document.getElementById('nav-icon').addEventListener('click', function() {
+            console.log("clicked");
+            document.getElementById('navbar-narrow').classList.toggle('active');});
         </script>
 
 </body>
