--- a/college-bias-project.html
+++ b/college-bias-project.html
@@ -30,10 +30,15 @@
 
           <div class="pe-right">
             <p class="pe-description">In my Practical Principles for Designing Fair Algorithms class, my final project was to explore a research area that may be affected by algorithmic unfairness. This project included a literature review, data sourcing, cleaning & transformation, coding Machine Learning models, a writeup, and a Powerpoint presentation to overview our project. I completed with project as a group with two other students in the class.</p>
+            <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
             <p>We chose to research algorithmic bias in higher education selectivity, considering it directly affected all of us. We examined how race may be indicate of the selectivity of colleges and universities, thus highlighting potential disparities in access and opportunities for individuals from different racial backgrounds.</p>
+            <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
             <p>Engaging in this project on algorithmic bias has provided me with a new perspective on the implications of AI in our society. While all of the attention currently seems to be on the powerful capabilites of AI, the importance of understanding how and why our models are just as, if not more, important than what it can do. this project provided a snapshot into that framework.</p>
+            <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
+
+            <p>The code and Powerpoint materials for this project can be found <a href="https://github.com/nurayyozden/Higher-Education-Algorithm-Exploration">here</a>.</p>
           </div>
       </div>
 
